--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,1 +1,7 @@
-config/_default/hugo.yaml
+title: ByteCascade 
+baseURL: https://example.com
+theme: hugo-blox-builder
+params:
+  appearance:
+    theme_day: minimal
+    theme_night: dark
